--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -13,7 +13,7 @@ http {
   server_tokens       off;
   keepalive_timeout   65;
   gzip                on;
-  access_log          off;
+  access_log          on;
   proxy_max_temp_file_size	0;
   #fastcgi_max_temp_file_size	0;
   limit_conn_zone $binary_remote_addr zone=phplimit:1m; # define a limit bucket for PHP-FPM
